cmake_minimum_required(VERSION 2.9)
project(XmHTML)

set(XMHTML_VERSION "1107")
set(XMHTML_ARCHIVE "1.1.7")

set(XMHTML_INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin")
set(XMHTML_INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib")
set(XMHTML_INSTALL_STA_DIR "${CMAKE_INSTALL_PREFIX}/lib")
set(XMHTML_INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include")


if (NOT ${X11_FOUND})
  find_package(X11 REQUIRED)
endif()
find_package(JPEG 62 REQUIRED)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DVERSION=${XMHTML_VERSION} -DMotif -DHAVE_LIBJPEG -DHAVE_REGEX_H")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DNDEBUG")

include_directories(include include/XmHTML include/common)
add_subdirectory(lib)

add_library(XmHTML $<TARGET_OBJECTS:XmHTML_objs>)
target_include_directories(XmHTML
  PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/include/http"
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/XmHTML"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/common"
)
target_link_libraries(XmHTML ${X11_Xpm_LIB} JPEG::JPEG)

install(TARGETS XmHTML
       RUNTIME DESTINATION ${XMHTML_INSTALL_BIN_DIR}
       LIBRARY DESTINATION ${XMHTML_INSTALL_LIB_DIR}
       ARCHIVE DESTINATION ${XMHTML_INSTALL_LIB_DIR}
       PUBLIC_HEADER DESTINATION ${XMHTML_INSTALL_INCLUDE_DIR}
) 
add_library(AFNI::XmHTML ALIAS XmHTML)
